# sparkly

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
sparkly/alembic/migrations/: env.py  script.py.mako
sparkly/alembic/migrations/versions/: 52454f47d3eb_create_vehicle_and_vehicle_logs_tables.py  a3b7bbf7fb46_create_log_vehicle_and_vehicletolog_.py  c2c43de6d77f_create_log_and_vehicle_table.py
sparkly/app/adapters/: __init__.py
sparkly/app/adapters/db/: __init__.py
sparkly/app/adapters/db/alembic/migrations/: env.py
sparkly/app/adapters/db/alembic/migrations/versions/: 3469f44bc875_rename_vehiclelogs_soc_field_name.py  600af940e35a_create_vehicle_and_vehicle_logs_tables.py
sparkly/app/adapters/db/postgres/: mappers.py  models.py  session.py
sparkly/app/adapters/db/sqlalchemy/: __init__.py  orm.py
sparkly/app/adapters/repos/: __init__.py
sparkly/app/adapters/repos/postgresql/: __init__.py  repositories.py
sparkly/app/config/: base.py
sparkly/app/containers/: __init__.py  core.py  database.py  main.py  message_busses.py  unit_of_work.py
sparkly/app/domain/aggregates/: vehicle.py
sparkly/app/domain/commands/: __init__.py  vehicle.py
sparkly/app/domain/entities/: vehicle.py
sparkly/app/domain/factories/: __init__.py  vehicle_log.py
sparkly/app/domain/queries/: __init__.py  vehicle.py
sparkly/app/domain/value_objects/: __init__.py  vehicle.py
sparkly/app/entrypoints/cli/: load_vehicle_logs.py
sparkly/app/entrypoints/http/fastapi/: main.py  middlewares.py  models.py  signals.py
sparkly/app/entrypoints/http/fastapi/v1/: api.py
sparkly/app/entrypoints/http/fastapi/v1/endpoints/: vehicle.py  vehicle_logs.py
sparkly/app/seedwork/adapters/: __init__.py  repositories.py
sparkly/app/seedwork/domain/: __init__.py  aggergates.py  commands.py  entities.py  events.py  factories.py  mixins.py  queries.py  repositories.py  value_objects.py
sparkly/app/seedwork/service_layer/: __init__.py  handlers.py  message_buses.py  mixins.py  uow.py
sparkly/app/service_layer/command_handlers/: __init__.py  exceptions.py  vehicle.py
sparkly/app/service_layer/query_handlers/: __init__.py  vehicle.py
sparkly/app/service_layer/uow/: __init__.py
sparkly/app/service_layer/uow/sqlalchemy/: __init__.py  vehicle.py
sparkly/app/utils/: sqlalchemy.py
sparkly/scripts/: entrypoint.sh  run_fastapi.sh
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/endpoints/: test_vehicle.py
tests/unit/endpoints/: test_vehicle.py
